[tool.poetry]
name = "renovate-mypy"
version = "0.1.0"
description = ""
authors = ["Trim21 <i@trim21.me>"]

[tool.poetry.dependencies]
python = "^3.7"
# real dependencies
redis = "3.3.11"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"
pytest-asyncio = "0.11.0"
mypy = "0.750"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
